fetch stock from nse

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ EEYE_TZ=Asia/Kolkata
 
 # Application Configuration
 EEYE_CONCURRENCY=5
+
+# NSE Bhavcopy Base URL
+NSE_BHAVCOPY_BASE_URL=https://nsearchives.nseindia.com/archives/equities/bhavcopy/pr
