optimize strategy execution and address ingestion bottleneck

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ GROWW_ACCESS_TOKEN=your_access_token_here
 GROWW_BASE_URL=https://api.groww.in
 GROWW_API_VERSION=v1
 GROWW_X_API_VERSION=1.0
-GROWW_RATE_LIMIT_PER_SECOND=10
+GROWW_RPS=4
 
 # Database Configuration
 EEYE_DB_HOST=localhost
@@ -12,9 +12,6 @@ EEYE_DB_USER=admin
 EEYE_DB_PASSWORD=root
 EEYE_DB_NAME=eeye
 EEYE_TZ=Asia/Kolkata
-
-# Application Configuration
-EEYE_CONCURRENCY=5
 
 # NSE Bhavcopy Base URL
 NSE_BHAVCOPY_BASE_URL=https://nsearchives.nseindia.com/archives/equities/bhavcopy/pr
