--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ EEYE_TZ=Asia/Kolkata
 
 # NSE Bhavcopy Base URL
 NSE_BHAVCOPY_BASE_URL=https://nsearchives.nseindia.com/archives/equities/bhavcopy/pr
+
+# MCP Configuration
+MCP_HOST=localhost
+MCP_PORT=3000
