--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ EEYE_DB_NAME=eeye
 EEYE_TZ=Asia/Kolkata
 
 # NSE Bhavcopy Base URL
-NSE_BHAVCOPY_BASE_URL=https://nsearchives.nseindia.com/archives/equities/bhavcopy/pr
+NSE_BHAVCOPY_BASE_URL=https://nsearchives.nseindia.com/content/cm
 
 # MCP Configuration
 MCP_HOST=localhost
